added cheating feature, added medals and accuracy to class task

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,9 @@
         <p>. Se for do lado <b>esquerdo</b>: preencher com <span class="std-light">pronome pessoal</span></p>
         <p>. Se for do lado <b>direito</b>: preencher com <span class="std-light">adjetivo possessivo</span></p>
       </div>
+      <div class="flex column going-center">
+        <button id="cheat-btn-class-task">clique e seja trapaceiro<input id="cheat-input-class-task" type="text" size="7"></button>
+      </div>
     </div>
   </div>
 
@@ -70,9 +73,13 @@
           <li>digite o <span class="std-light">adjetivo possessivo</span> associado</li>
         </ul>
       </div>
+
+      <div class="flex column going-center">
+        <button id="cheat-btn-home-task">clique e seja trapaceiro<input id="cheat-input-home-task" type="text" size="7"></button>
+      </div>
       
     </div>
-    
+
     <div id="sentences-box" class="std-vanish"></div>
   </div>
 
