--- a/html/index.html
+++ b/html/index.html
@@ -83,6 +83,6 @@
     <div id="sentences-box" class="std-vanish"></div>
   </div>
 
-  <script src="../static/js/script.js" type="text/javascript"></script>
+  <script src="../static/js/script.js"></script>
 </body>
 </html>
